infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: client-service

  template:
    metadata:
      labels:
        app: client-service

    spec:
      containers:
        - name: client-service
          image: client-service
          imagePullPolicy: Never

          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: client-service

spec:
  selector:
    app: client-service

  ports:
    - name: client-service
      protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
