infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nats-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nats

  template:
    metadata:
      labels:
        app: nats

    spec:
      containers:
        - name: nats
          image: nats-streaming:0.25.6

          args:
            - "-p"
            - "4222"
            - "-m"
            - "8222"
            - "-cluster_id"
            - "ticketing"

          ports:
            - containerPort: 4222
            - containerPort: 8222

---
apiVersion: v1
kind: Service

metadata:
  name: nats-service

spec:
  selector:
    app: nats

  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222

    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222

  type: ClusterIP
