infra/k8s/order-mongo.depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-mongo-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-mongo

  template:
    metadata:
      labels:
        app: order-mongo

    spec:
      containers:
        - name: order-mongo
          image: mongo:7

          ports:
            - containerPort: 27017

---
apiVersion: v1
kind: Service

metadata:
  name: order-mongo-service

spec:
  selector:
    app: order-mongo

  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017

  type: ClusterIP
