infra/k8s/order.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service
          image: order-service
          imagePullPolicy: Never

          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service

spec:
  selector:
    app: order-service

  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
