infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-service

  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx

  rules:
    - host: ticketing.dev

      http:
        paths:
          - path: /api/auth
            pathType: Prefix

            backend:
              service:
                name: auth-service

                port:
                  number: 3000

          - path: /api/tickets
            pathType: Prefix

            backend:
              service:
                name: ticket-service

                port:
                  number: 3000

          - path: /
            pathType: Prefix

            backend:
              service:
                name: client-service

                port:
                  number: 3000
